# named-entity-recognition

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  app_settings.yaml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: main.ipynb  ner_analysis.ipynb
src/named_entity_recognition/: api_router.py  config.py  main.py  models.py  responses.py
static/ner_model_de/: meta.json
static/ner_model_de/ner/: model  moves
static/ner_model_de_desc/: config.cfg  tokenizer
static/ner_model_de_desc/ner/: model
static/ner_model_de_desc/vocab/: strings.json
tests/: test_api.py  test_extract.py  test_import.py
tests/static/ner_model_de/ner/: model
tests/static/ner_model_de/vocab/: strings.json
